--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
 @import "tailwindcss" source(none);
 @source "./public/*.{html,js}";
-@plugin "daisyui";
+ @plugin "daisyui" {
+   themes: light --default, dark --prefersdark, aqua;
+ }
