--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
-@import "tailwindcss" source(none);
-@source "./public/*.{html,js}";
- @plugin "daisyui" {
-   themes: light --default, dark --prefersdark, aqua;
- }
+@import 'tailwindcss';
+@plugin 'daisyui' {
+  themes: light --default, dark --prefersdark, aqua;
+}
